# Agentic_AI_projects

./: OPENAI_SDK_OPENROUTER.ipynb
OpenAI_agent_SDK/project1/: .env  agent.py  open_router.py  pyproject.toml
litellm/project1/: pyproject.toml
litellm/project1/src/project1/: hello.py
project2/: pyproject.toml
uv_projects/project2/: pyproject.toml
