[project]
name = "project2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rahat048", email = "rahat.mehmood048@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.100.1",
    "crewai-tools>=0.33.0",
    "onnxruntime>=1.20.1",
]

[project.scripts]
project2 = "project2:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
