[project]
name = "project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rahat048", email = "rahat.mehmood048@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "litellm>=1.68.0",
]

[project.scripts]
project1 = "project1:main"
gemini1 = "project1.hello:hello"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
